--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -27,7 +27,7 @@ body {
     fieldset {
       display: flex;
       flex-direction: column;
-      gap: .5rem;
+      gap: 0.5rem;
 
       legend {
         font-weight: 400;
@@ -40,20 +40,79 @@ body {
 
         input {
           flex: 1;
-          padding: .25rem;
+          padding: 0.25rem;
         }
       }
 
       &.form__btns {
         display: flex;
         flex-direction: row;
-        gap: .5rem;
+        gap: 0.5rem;
 
         button {
           flex: 1;
-          padding: .25rem;
+          padding: 0.25rem;
         }
       }
     }
+  }
+}
+
+#employees {
+  flex: 1;
+  max-width: 50%;
+  overflow-x: auto;
+
+  table {
+    width: 100%;
+    table-layout: fixed;
+    border-collapse: collapse;
+
+    thead {
+      th {
+        background-color: #f4f4f4;
+        padding: 15px 12px;
+        text-align: left;
+        font-weight: 600;
+
+        &:first-child {
+          width: 70px;
+          text-align: center;
+        }
+
+        &:last-child {
+          width: 120px;
+          text-align: center;
+        }
+      }
+    }
+
+    tbody {
+      td {
+        padding: 12px;
+        border-bottom: 1px solid #eee;
+        vertical-align: middle;
+        word-wrap: break-word;
+
+        &:first-child {
+          width: 70px;
+          text-align: center;
+        }
+
+        &:last-child {
+          width: 120px;
+          text-align: center;
+        }
+      }
+    }
+  }
+
+  img {
+    width: 50px;
+    height: 50px;
+    object-fit: cover;
+    border-radius: 4px;
+    display: block;
+    margin: 0 auto;
   }
 }
